--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Batch-10-Assignment</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header></header>
-    <main></main>
+<body class="azeret-mono-text">
+    <header>
+        <section class="banner-container">
+            <div class="banner-information">
+                <img class="banner-image" src="./assets/Group.png" alt="picture">
+                <h3 class="banner-title">"In the near future, I hope to <br> become a Developer."</h3>
+                <p class="banner-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <button class="btn-primary">Contact with me</button>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="develop-query">
+            
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
