--- a/index.html
+++ b/index.html
@@ -12,14 +12,53 @@
             <div class="banner-information">
                 <img class="banner-image" src="./assets/Group.png" alt="picture">
                 <h3 class="banner-title">"In the near future, I hope to <br> become a Developer."</h3>
-                <p class="banner-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                <button class="btn-primary">Contact with me</button>
+                <p class="banner-subtitle"> Becoming a Developer opens up many opportunities in the tech industry. If you need any tips or resources to help you along the way, feel free to ask!</p>
+                <button class="btn-primary"> <a id="btn-primary-footer" href="#">Contact with me</a></button>
             </div>
         </section>
     </header>
     <main>
         <section class="develop-query">
-            
+            <div class="some-question">
+                <h3 class="develop-title">Why Web Development??</h3>
+                <p class="develop-subtitle">Web development offers creative freedom and the ability to build interactive, user-friendly websites and applications. It also provides numerous job opportunities and the chance to work with the latest technologies.</p>
+            </div>
+            <div class="develop-question">
+                <div class="question-one">
+                    <h3 class="develop-question-title">I will Do Coding and Change The World</h3>
+                    <p class="develop-question-answer"> By developing new technologies and improving existing ones, you have the power to drive change and make a difference in the world.</p>
+                   <button class="btn-style"><a id="btn-primary-style"href="#">Learn More</a></button> 
+                </div>
+                <div class="attention-imag">
+                    <img src="./assets/Group 4.png" alt="picture with man">
+                </div>
+            </div>
+            <div>
+            <div class="develop-question">
+                <div class="question-two">
+                    <div class="attention-imag">
+                        <img src="./assets/Group 4.png" alt="picture with man">
+                    </div>
+                    <div>
+                        <h3 class="develop-question-title">I will Do Coding and Change The World</h3>
+                        <p class="develop-question-answer"> By developing new technologies and improving existing ones, you have the power to drive change and make a difference in the world.</p>
+                       <button class="btn-style"><a id="btn-primary-style"href="#">Learn More</a></button> 
+                    </div>
+                   
+                </div>
+            </div>
+            <div>
+            <div class="develop-question">
+                <div class="question-three">
+                    <h3 class="develop-question-title">I will Do Coding and Change The World</h3>
+                    <p class="develop-question-answer"> By developing new technologies and improving existing ones, you have the power to drive change and make a difference in the world.</p>
+                   <button class="btn-style"><a id="btn-primary-style"href="#">Learn More</a></button> 
+                </div>
+                <div class="attention-imag">
+                    <img src="./assets/Group 4.png" alt="picture with man">
+                </div>
+            </div>
+            <div> 
         </section>
     </main>
     <footer></footer>
