i done before the next terget

--- a/index.html
+++ b/index.html
@@ -60,7 +60,41 @@
             </div>
             <div> 
         </section>
+        <section class="inspiration-container">
+            <h1 class="inspiration-title">My Inspiration</h1>
+            <p class="inspiration-subtitle">I follow Jhankar sir's lecture about web development very closely and i found it very easy and helpful.So,I decided to take web development as my future profession for the betterment of my future life.</p>
+            <div class="youtube-video">
+                <iframe width="1140" height="614" src="https://www.youtube.com/embed/01l0s1iR_ZI?si=EKGc6cnVh-Hy4NL6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="current-target">
+            <h4 class="target-title">My Current Target</h4>
+            <p class="target-subtitle">HTML, Javascript, and CSS are the building blocks of the web.So,I determined the next 6 month learn about the website design.</p>
+            <div class="current-terget-container">
+                <div class="target-html">
+                    <img class="image-one" src="./assets/html.png" alt="html-icon">
+                    <h3 class="html-title">HTML</h3>
+                    <p class="html-subtitle-unique html-subtitle">HTML is essential for the backbone for all web development.</p>
+                    <a class="new-tab-anchor" href="https://www.w3schools.com/html/default.asp" target="_blank">Learn More</a>
+                </div>
+                <div class="target-css">
+                    <img class="image-two" src="./assets/css.png" alt="css-icon">
+                    <h3 class="html-title">CSS</h3>
+                    <p class="html-subtitle">CSS is essential for designing and customizing the visual presentation of web pages.</p>
+                    <a class="new-tab-anchor" href="https://www.geeksforgeeks.org/css-complete-guide/" target="_blank">Learn More</a>
+                </div>
+                <div class="target-javascript">
+                    <img class="image-three" src="./assets/js.png" alt="java-icon">
+                    <h3 class="html-title">JavaScript</h3>
+                    <p class="html-subtitle"> JavaScript is essential for creating dynamic and interactive web applications.</p>
+                    <a class="new-tab-anchor " href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
+                </div>
+            </div>
+        </section>
+         
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
